# TCI

./: Dockerfile  README.md  docker-compose.yaml  pyproject.toml
data/input/: test_example.json
src/: client.py  config.pbtxt  model.py  requirements_server.txt  utils_data.py
tci-env/: pyvenv.cfg
