[tool.poetry]
name = "tci"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.10,<3.13"
torch = "^2.1.0"
transformers = "^4.34.1"
numpy = "^1.26.1"
Pillow = "^10.1.0"

[tool.poetry.group.tritonclient]
optional=true

[tool.poetry.group.tritonclient.dependencies]
python = ">=3.10,<3.13"
torch = "^2.1.0"
numpy = "^1.26.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
